// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/ActiontechTable-FilterButton render click filter btn 1`] = `
<body>
  <div>
    <button
      class="ant-btn ant-btn-default ant-btn-sm actiontech-filter-button-namespace basic-button-wrapper css-geipcv"
      style="padding: 0px 6px 0px 10px;"
      type="button"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center css-1nt49ug"
      >
        <div
          class="ant-space-item"
          style="margin-right: 2px;"
        >
          收起筛选
        </div>
        <div
          class="ant-space-item"
        >
          <svg
            color="currentColor"
            fill="none"
            height="14"
            viewBox="0 0 16 16"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m8 7.219-3.3 3.3-.942-.943L8 5.333l4.243 4.243-.943.943z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
</body>
`;

exports[`lib/ActiontechTable-FilterButton render click filter btn 2`] = `
<body>
  <div>
    <button
      class="ant-btn ant-btn-default ant-btn-sm actiontech-filter-button-namespace basic-button-wrapper css-geipcv"
      style="padding: 0px 6px 0px 10px;"
      type="button"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center css-1nt49ug"
      >
        <div
          class="ant-space-item"
          style="margin-right: 2px;"
        >
          收起筛选
        </div>
        <div
          class="ant-space-item"
        >
          <svg
            color="currentColor"
            fill="none"
            height="14"
            viewBox="0 0 16 16"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m8 7.219-3.3 3.3-.942-.943L8 5.333l4.243 4.243-.943.943z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
</body>
`;

exports[`lib/ActiontechTable-FilterButton render disabled filter button 1`] = `
<body>
  <div>
    <button
      class="ant-btn ant-btn-default ant-btn-sm ant-btn-two-chinese-chars actiontech-filter-button-namespace basic-button-wrapper css-geipcv"
      disabled=""
      style="padding: 0px 6px 0px 10px;"
      type="button"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center css-1nt49ug"
      >
        <div
          class="ant-space-item"
          style="margin-right: 2px;"
        >
          筛选
        </div>
        <div
          class="ant-space-item"
        >
          <svg
            color="currentColor"
            height="14"
            viewBox="0 0 16 16"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
</body>
`;

exports[`lib/ActiontechTable-FilterButton render hasSelectedFilter 1`] = `
<body>
  <div>
    <button
      class="ant-btn ant-btn-default ant-btn-sm ant-btn-two-chinese-chars actiontech-filter-button-namespace basic-button-wrapper css-geipcv"
      style="padding: 0px 6px 0px 10px;"
      type="button"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center css-1nt49ug"
      >
        <div
          class="ant-space-item"
          style="margin-right: 2px;"
        >
          筛选
        </div>
        <div
          class="ant-space-item"
        >
          <svg
            color="currentColor"
            height="14"
            viewBox="0 0 16 16"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </button>
  </div>
</body>
`;
